<?xml version="1.0"?>
<package format="3">
  <name>panda_keyboard_control</name>
  <version>0.0.0</version>
  <description>Keyboard + service/action control for Panda</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For Python nodes -->
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <!-- rosidl generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- runtime deps -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>panda_interfaces</exec_depend>
</package>
